--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -124,7 +124,7 @@
                 <li><strong>Client</strong>: Miedema Africa Limited</li>
                 <li><strong>Project date</strong>: February 2024 - April 2024</li>
                 <li><strong>Technologies</strong>: HTML, CSS, JavaScript</li>
-                <li><strong>Project URL</strong>: <a href="https://miedema-africa-limited.vercel.app/" target="_blank" rel="noopener">miedema-africa-limited.vercel.app</a></li>
+                <li><strong>Project URL</strong>: <a href="https://miedema-africa-limited-001.vercel.app/" target="_blank" rel="noopener">miedema-africa-limited-001.vercel.app</a></li>
               </ul>
             </div>
           </div>
